cross-country solar comparison analysis updated

--- a/compare_countries.ipynb
+++ b/compare_countries.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a62033ea-9c59-4a1a-9d4a-7c790cfd5b17",
+   "execution_count": 1,
+   "id": "9dc836e4-ac92-4823-a5d3-16cd0fe8f916",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "benin = pd.read_csv(\"data/benin_clean.csv\")\n",
+    "benin = pd.read_csv(\"data/data/benin-malanville.csv\")\n",
     "sierra_leone = pd.read_csv(\"data/data/sierraleone-bumbuna.csv\")\n",
     "togo = pd.read_csv(\"data/data/togo-dapaong_qc.csv\")\n",
     "\n",
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "97097ba5-0b6e-43a5-a982-7cad00cfc609",
+   "execution_count": 3,
+   "id": "1dc68cec-b47c-4e55-9efb-314373d226a8",
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +58,9 @@
     }
    ],
    "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "for metric in [\"GHI\", \"DNI\", \"DHI\"]:\n",
     "    plt.figure(figsize=(8, 5))\n",
     "    sns.boxplot(data=df_all, x=\"Country\", y=metric, hue=\"Country\", palette=\"Set2\", legend=False)\n",
@@ -65,14 +68,13 @@
     "    plt.ylabel(metric)\n",
     "    plt.xlabel(\"Country\")\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n"
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5a6e0e1a-38e8-4520-bf57-dc1cbc8d2c19",
+   "execution_count": 4,
+   "id": "bb4b5c47-692c-4262-b1c3-11a55a41230b",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +188,7 @@
        "Togo          156.52  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "776dafd5-a8f9-4b51-aedd-0acf0e992a5a",
+   "execution_count": 5,
+   "id": "8731f831-de14-4226-b52a-5f2f63b276cd",
    "metadata": {},
    "outputs": [
     {
@@ -224,8 +226,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "87039493-3a02-479d-8a34-e0fca569392f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4185813936.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m- Togo presents a balanced profile, with the second-highest mean GHI (230.56) and lowest DHI variability (std = 156.52), which may reflect stable diffuse irradiance conditions.\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "- Togo presents a balanced profile, with the second-highest mean GHI (230.56) and lowest DHI variability (std = 156.52), which may reflect stable diffuse irradiance conditions.\n",
+    "- Benin shows the highest mean GHI (240.56) and also the highest GHI variability (std = 331.13), suggesting it receives strong but inconsistent solar irradiance.\n",
+    "- Sierra Leone consistently records the lowest mean values for GHI, DNI, and DHI, indicating the weakest solar potential among the three countries.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "264013e6-0e89-44da-ae26-f48d48bc49aa",
+   "id": "099c6986-c46d-4c6d-93e1-42cec2be436b",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dc836e4-ac92-4823-a5d3-16cd0fe8f916",
+   "id": "ceaf5e98-c703-451d-9945-6f95ced2f8a0",
    "metadata": {},
    "outputs": [],
    "source": []
